--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -34,9 +34,9 @@
    "outputs": [],
    "source": [
     "## install finrl library\n",
-    "!pip install wrds\n",
-    "!pip install swig\n",
-    "!pip install git+https://github.com/AI4Finance-Foundation/FinRL.git"
+    "pip install wrds\n",
+    "pip install swig\n",
+    "pip install git+https://github.com/AI4Finance-Foundation/FinRL.git"
    ]
   },
   {
@@ -60,6 +60,15 @@
     "API_SECRET = \"\"\n",
     "API_BASE_URL = 'https://paper-api.alpaca.markets'\n",
     "data_url = 'wss://data.alpaca.markets'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import finrl;"
    ]
   },
   {
@@ -91,7 +100,7 @@
     "from finrl.plot import backtest_stats, backtest_plot, get_daily_return, get_baseline\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -1213,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "LpkoZpYzfneS"
    },
@@ -1618,19 +1627,7 @@
    "metadata": {
     "id": "Kl9nulnAJtiI"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1660 minutes til market open.\n",
-      "1659 minutes til market open.\n",
-      "1658 minutes til market open.\n",
-      "1657 minutes til market open.\n",
-      "1656 minutes til market open.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "paper_trading_erl = AlpacaPaperTrading(ticker_list = DOW_30_TICKER, \n",
     "                                       time_interval = '1Min', \n",
@@ -1869,7 +1866,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('venv': venv)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1883,11 +1880,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "005d14239094016f48a03a57365c4ccb734e3f38c20ed0ca595d84f773bc39cd"
+    "hash": "146de41bdd921a4e49b5430ed435984d2f3b4e3da25c2db8b0d474b5a0f67c6d"
    }
   }
  },
