--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -34,9 +34,9 @@
    "outputs": [],
    "source": [
     "## install finrl library\n",
-    "pip install wrds\n",
-    "pip install swig\n",
-    "pip install git+https://github.com/AI4Finance-Foundation/FinRL.git"
+    "#!pip install wrds\n",
+    "#!pip install swig\n",
+    "#!pip install git+https://github.com/AI4Finance-Foundation/FinRL.git"
    ]
   },
   {
@@ -50,21 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "8Z6qlLXY-fA2"
    },
    "outputs": [],
    "source": [
-    "API_KEY = \"\"\n",
-    "API_SECRET = \"\"\n",
+    "API_KEY = \"PKKZYX1GWDJ3XMCBFFJL\"\n",
+    "API_SECRET = \"QalnMhxLL1S0rXcNYAh1mR7OheCJlWLGHbfDmXc0\"\n",
     "API_BASE_URL = 'https://paper-api.alpaca.markets'\n",
     "data_url = 'wss://data.alpaca.markets'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "-EYx40S84tzo"
    },
@@ -131,7 +131,9 @@
     "from torch import Tensor\n",
     "from torch.distributions.normal import Normal\n",
     "\n",
-    "\n",
+    "# This is the actor and its capabilities.\n",
+    "#it will only enforce the policy.\n",
+    "#it uses a neural network to make its decisions.\n",
     "class ActorPPO(nn.Module):\n",
     "    def __init__(self, dims: [int], state_dim: int, action_dim: int):\n",
     "        super().__init__()\n",
@@ -163,7 +165,7 @@
     "    def convert_action_for_env(action: Tensor) -> Tensor:\n",
     "        return action.tanh()\n",
     "\n",
-    "\n",
+    "# The critic writes the policies and rewards the Actor\n",
     "class CriticPPO(nn.Module):\n",
     "    def __init__(self, dims: [int], state_dim: int, _action_dim: int):\n",
     "        super().__init__()\n",
@@ -180,6 +182,8 @@
     "    del net_list[-1]  # remove the activation of output layer\n",
     "    return nn.Sequential(*net_list)\n",
     "\n",
+    "# I think these are all of the hyper parameters for the neural network.\n",
+    "# you tune the neural network and let the actor make the decisions.\n",
     "\n",
     "class Config:\n",
     "    def __init__(self, agent_class=None, env_class=None, env_args=None):\n",
@@ -196,6 +200,13 @@
     "        self.agent_class = agent_class  # agent = agent_class(...)\n",
     "\n",
     "        '''Arguments for reward shaping'''\n",
+    "        #The parameter self.gamma represents the discount factor, which is a value that determines the importance of future rewards in the algorithm's decision-making process.\n",
+    "        # A discount factor of 0.99 means that the algorithm will place more importance on future rewards and less importance on immediate rewards.\n",
+    "        # In reinforcement learning, the goal is to maximize the cumulative reward over time. \n",
+    "        # The discount factor helps to balance the trade-off between immediate rewards and future rewards. \n",
+    "        # A higher discount factor (e.g. 0.99) means that the algorithm will be more patient and will prefer long-term rewards over short-term rewards, \n",
+    "        # while a lower discount factor (e.g. 0.9) means that the algorithm will be more short-sighted and will focus more on immediate rewards.\n",
+    "        \n",
     "        self.gamma = 0.99  # discount factor of future rewards\n",
     "        self.reward_scale = 1.0  # an approximate target reward usually be closed to 256\n",
     "\n",
@@ -535,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "pwCbbocm6PHM"
    },
@@ -679,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "j8-e03ev32oz"
    },
@@ -751,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "Evsg8QtEDHDO"
    },
@@ -829,19 +840,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ticker_list = DOW_30_TICKER\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ticker_list = ticker_list +['PHUN']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "id": "jx25TA_X87F-"
    },
    "outputs": [],
    "source": [
-    "ticker_list = DOW_30_TICKER\n",
-    "action_dim = len(DOW_30_TICKER)"
+    "action_dim = len(ticker_list)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -849,14 +878,22 @@
     "id": "UIV0kO_y-inG",
     "outputId": "bd7b3c21-641e-4eb7-a4af-ae7d156042a6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AXP', 'AMGN', 'AAPL', 'BA', 'CAT', 'CSCO', 'CVX', 'GS', 'HD', 'HON', 'IBM', 'INTC', 'JNJ', 'KO', 'JPM', 'MCD', 'MMM', 'MRK', 'MSFT', 'NKE', 'PG', 'TRV', 'UNH', 'CRM', 'VZ', 'V', 'WBA', 'WMT', 'DIS', 'DOW', 'PHUN']\n"
+     ]
+    }
+   ],
    "source": [
     "print(ticker_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -864,7 +901,15 @@
     "id": "CnqQ-cC5-rfO",
     "outputId": "29b248c9-ec98-44cd-befb-65192af72ea4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['macd', 'boll_ub', 'boll_lb', 'rsi_30', 'cci_30', 'dx_30', 'close_30_sma', 'close_60_sma']\n"
+     ]
+    }
+   ],
    "source": [
     "print(INDICATORS)"
    ]
@@ -880,19 +925,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "GLfkTsXK-e90"
    },
    "outputs": [],
    "source": [
     "# amount + (turbulence, turbulence_bool) + (price, shares, cd (holding time)) * stock_dim + tech_dim\n",
+    "#why are they taking the length of INDICATORS.\n",
+    "#Is 1+2+3 not = 5?  Are they multiplying 3* action_dim?\n",
+    "#Check the order of operations, how do we get 344 out of this equation?\n",
     "state_dim = 1 + 2 + 3 * action_dim + len(INDICATORS) * action_dim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -900,9 +948,17 @@
     "id": "QqUkvImG-n66",
     "outputId": "9cb4a3d8-5064-4971-d095-65d3ab12f11a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "344\n"
+     ]
+    }
+   ],
    "source": [
-    "state_dim"
+    "print(state_dim)"
    ]
   },
   {
@@ -946,11 +1002,11 @@
    },
    "outputs": [],
    "source": [
-    "#DP = DataProcessor(data_source = 'alpaca',\n",
-    "#                  API_KEY = API_KEY, \n",
-    "#                  API_SECRET = API_SECRET, \n",
-    "#                  API_BASE_URL = API_BASE_URL\n",
-    "#                  )"
+    "DP = DataProcessor(data_source = 'alpaca',\n",
+    "                  API_KEY = API_KEY, \n",
+    "                  API_SECRET = API_SECRET, \n",
+    "                  API_BASE_URL = API_BASE_URL\n",
+    "                  )"
    ]
   },
   {
@@ -1866,7 +1922,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "finrlenv",
    "language": "python",
    "name": "python3"
   },
@@ -1880,11 +1936,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "146de41bdd921a4e49b5430ed435984d2f3b4e3da25c2db8b0d474b5a0f67c6d"
+    "hash": "40d5bf3a0028f59af012b0267756a206437470ca0ff90e5d4bd6ad29f4598305"
    }
   }
  },
