--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -448,6 +448,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This is the class that outputs the results\n",
+    "        \n",
+    "class Evaluator:\n",
+    "    def __init__(self, eval_env, eval_per_step: int = 1e4, eval_times: int = 8, cwd: str = '.'):\n",
+    "        self.cwd = cwd\n",
+    "        self.env_eval = eval_env\n",
+    "        self.eval_step = 0\n",
+    "        self.total_step = 0\n",
+    "        self.start_time = time.time()\n",
+    "        self.eval_times = eval_times  # number of times that get episodic cumulative return\n",
+    "        self.eval_per_step = eval_per_step  # evaluate the agent per training steps\n",
+    "\n",
+    "        self.recorder = []\n",
+    "        print(f\"\\n| `step`: Number of samples, or total training steps, or running times of `env.step()`.\"\n",
+    "              f\"\\n| `time`: Time spent from the start of training to this moment.\"\n",
+    "              f\"\\n| `avgR`: Average value of cumulative rewards, which is the sum of rewards in an episode.\"\n",
+    "              f\"\\n| `stdR`: Standard dev of cumulative rewards, which is the sum of rewards in an episode.\"\n",
+    "              f\"\\n| `avgS`: Average of steps in an episode.\"\n",
+    "              f\"\\n| `objC`: Objective of Critic network. Or call it loss function of critic network.\"\n",
+    "              f\"\\n| `objA`: Objective of Actor network. It is the average Q value of the critic network.\"\n",
+    "              f\"\\n| {'step':>8}  {'time':>8}  | {'avgR':>8}  {'stdR':>6}  {'avgS':>6}  | {'objC':>8}  {'objA':>8}\")\n",
+    "            \n",
+    "    def evaluate_and_save(self, actor, horizon_len: int, logging_tuple: tuple):\n",
+    "        self.total_step += horizon_len\n",
+    "        if self.eval_step + self.eval_per_step > self.total_step:\n",
+    "            return\n",
+    "        self.eval_step = self.total_step\n",
+    "\n",
+    "        rewards_steps_ary = [get_rewards_and_steps(self.env_eval, actor) for _ in range(self.eval_times)]\n",
+    "        rewards_steps_ary = np.array(rewards_steps_ary, dtype=np.float32)\n",
+    "        avg_r = rewards_steps_ary[:, 0].mean()  # average of cumulative rewards\n",
+    "        std_r = rewards_steps_ary[:, 0].std()  # std of cumulative rewards\n",
+    "        avg_s = rewards_steps_ary[:, 1].mean()  # average of steps in an episode\n",
+    "\n",
+    "        used_time = time.time() - self.start_time\n",
+    "        self.recorder.append((self.total_step, used_time, avg_r))\n",
+    "        \n",
+    "        print(f\"| {self.total_step:8.2e}  {used_time:8.0f}  \"\n",
+    "              f\"| {avg_r:8.2f}  {std_r:6.2f}  {avg_s:6.0f}  \"\n",
+    "              f\"| {logging_tuple[0]:8.2f}  {logging_tuple[1]:8.2f}\")\n",
+    "\n",
+    "\n",
+    "def get_rewards_and_steps(env, actor, if_render: bool = False) -> (float, int):  # cumulative_rewards and episode_steps\n",
+    "    device = next(actor.parameters()).device  # net.parameters() is a Python generator.\n",
+    "\n",
+    "    state = env.reset()\n",
+    "    episode_steps = 0\n",
+    "    cumulative_returns = 0.0  # sum of rewards in an episode\n",
+    "    for episode_steps in range(12345):\n",
+    "        tensor_state = torch.as_tensor(state, dtype=torch.float32, device=device).unsqueeze(0)\n",
+    "        tensor_action = actor(tensor_state)\n",
+    "        action = tensor_action.detach().cpu().numpy()[0]  # not need detach(), because using torch.no_grad() outside\n",
+    "        state, reward, done, _ = env.step(action)\n",
+    "        cumulative_returns += reward\n",
+    "\n",
+    "        if if_render:\n",
+    "            env.render()\n",
+    "        if done:\n",
+    "            break\n",
+    "    return cumulative_returns, episode_steps + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
    "outputs": [],
@@ -519,68 +587,7 @@
    "execution_count": 90,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "        \n",
-    "class Evaluator:\n",
-    "    def __init__(self, eval_env, eval_per_step: int = 1e4, eval_times: int = 8, cwd: str = '.'):\n",
-    "        self.cwd = cwd\n",
-    "        self.env_eval = eval_env\n",
-    "        self.eval_step = 0\n",
-    "        self.total_step = 0\n",
-    "        self.start_time = time.time()\n",
-    "        self.eval_times = eval_times  # number of times that get episodic cumulative return\n",
-    "        self.eval_per_step = eval_per_step  # evaluate the agent per training steps\n",
-    "\n",
-    "        self.recorder = []\n",
-    "        print(f\"\\n| `step`: Number of samples, or total training steps, or running times of `env.step()`.\"\n",
-    "              f\"\\n| `time`: Time spent from the start of training to this moment.\"\n",
-    "              f\"\\n| `avgR`: Average value of cumulative rewards, which is the sum of rewards in an episode.\"\n",
-    "              f\"\\n| `stdR`: Standard dev of cumulative rewards, which is the sum of rewards in an episode.\"\n",
-    "              f\"\\n| `avgS`: Average of steps in an episode.\"\n",
-    "              f\"\\n| `objC`: Objective of Critic network. Or call it loss function of critic network.\"\n",
-    "              f\"\\n| `objA`: Objective of Actor network. It is the average Q value of the critic network.\"\n",
-    "              f\"\\n| {'step':>8}  {'time':>8}  | {'avgR':>8}  {'stdR':>6}  {'avgS':>6}  | {'objC':>8}  {'objA':>8}\")\n",
-    "            \n",
-    "    def evaluate_and_save(self, actor, horizon_len: int, logging_tuple: tuple):\n",
-    "        self.total_step += horizon_len\n",
-    "        if self.eval_step + self.eval_per_step > self.total_step:\n",
-    "            return\n",
-    "        self.eval_step = self.total_step\n",
-    "\n",
-    "        rewards_steps_ary = [get_rewards_and_steps(self.env_eval, actor) for _ in range(self.eval_times)]\n",
-    "        rewards_steps_ary = np.array(rewards_steps_ary, dtype=np.float32)\n",
-    "        avg_r = rewards_steps_ary[:, 0].mean()  # average of cumulative rewards\n",
-    "        std_r = rewards_steps_ary[:, 0].std()  # std of cumulative rewards\n",
-    "        avg_s = rewards_steps_ary[:, 1].mean()  # average of steps in an episode\n",
-    "\n",
-    "        used_time = time.time() - self.start_time\n",
-    "        self.recorder.append((self.total_step, used_time, avg_r))\n",
-    "        \n",
-    "        print(f\"| {self.total_step:8.2e}  {used_time:8.0f}  \"\n",
-    "              f\"| {avg_r:8.2f}  {std_r:6.2f}  {avg_s:6.0f}  \"\n",
-    "              f\"| {logging_tuple[0]:8.2f}  {logging_tuple[1]:8.2f}\")\n",
-    "\n",
-    "\n",
-    "def get_rewards_and_steps(env, actor, if_render: bool = False) -> (float, int):  # cumulative_rewards and episode_steps\n",
-    "    device = next(actor.parameters()).device  # net.parameters() is a Python generator.\n",
-    "\n",
-    "    state = env.reset()\n",
-    "    episode_steps = 0\n",
-    "    cumulative_returns = 0.0  # sum of rewards in an episode\n",
-    "    for episode_steps in range(12345):\n",
-    "        tensor_state = torch.as_tensor(state, dtype=torch.float32, device=device).unsqueeze(0)\n",
-    "        tensor_action = actor(tensor_state)\n",
-    "        action = tensor_action.detach().cpu().numpy()[0]  # not need detach(), because using torch.no_grad() outside\n",
-    "        state, reward, done, _ = env.step(action)\n",
-    "        cumulative_returns += reward\n",
-    "\n",
-    "        if if_render:\n",
-    "            env.render()\n",
-    "        if done:\n",
-    "            break\n",
-    "    return cumulative_returns, episode_steps + 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1314,12 +1321,22 @@
       "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
       "  if pd.Timedelta(time_interval).delta < day_delta:\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price_array:  7800\n",
+      "| load actor from: ./papertrading_erl/actor.pth\n",
+      "Test Finished!\n",
+      "episode_return 1.0200287649085367\n"
+     ]
     }
    ],
    "source": [
     "\n",
-    "#Where is this function and what does it do?\n",
-    "# The Output is some sort of score:\n",
+    "#Where is this function and what does it do?  Let's ask ChatGPT!\n",
+    "# The Output is some sort of score output by DRL_prediction()\n",
     "# Test Finished!\n",
     "# episode_return 1.0200287649085367\n",
     "\n",
@@ -1361,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1400,16 +1417,16 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        11  |   -13.43    0.00    7799  |     6.48      0.05\n",
-      "| 4.00e+04        21  |   -12.37    0.00    7799  |     3.15      0.04\n",
-      "| 6.00e+04        32  |   -13.89    0.00    7799  |     3.92      0.04\n",
-      "| 8.00e+04        42  |   -12.15    0.00    7799  |     0.90      0.04\n",
-      "| 1.00e+05        53  |   -13.22    0.00    7799  |     0.97      0.05\n",
-      "| 1.20e+05        64  |   -13.03    0.00    7799  |     0.57      0.03\n",
-      "| 1.40e+05        74  |   -13.28    0.00    7799  |     0.84      0.06\n",
-      "| 1.60e+05        85  |   -12.21    0.00    7799  |     1.58      0.03\n",
-      "| 1.80e+05        95  |   -13.15    0.00    7799  |     0.62      0.04\n",
-      "| 2.00e+05       106  |   -13.03    0.00    7799  |     1.52      0.05\n"
+      "| 2.00e+04        11  |    -0.00    0.00    7799  |     0.03      0.04\n",
+      "| 4.00e+04        21  |    -0.00    0.00    7799  |     0.01      0.04\n",
+      "| 6.00e+04        32  |    -0.00    0.00    7799  |     0.00      0.03\n",
+      "| 8.00e+04        42  |    -0.00    0.00    7799  |     0.00      0.05\n",
+      "| 1.00e+05        53  |    -0.00    0.00    7799  |     0.00      0.04\n",
+      "| 1.20e+05        64  |    -0.00    0.00    7799  |     0.00      0.05\n",
+      "| 1.40e+05        74  |    -0.00    0.00    7799  |     0.00      0.06\n",
+      "| 1.60e+05        85  |    -0.00    0.00    7799  |     0.00      0.06\n",
+      "| 1.80e+05        95  |    -0.00    0.00    7799  |     0.00      0.04\n",
+      "| 2.00e+05       106  |    -0.00    0.00    7799  |     0.00      0.05\n"
      ]
     }
    ],
@@ -1421,7 +1438,7 @@
     "      end_date = ed,\n",
     "      ticker_list = ticker_list, \n",
     "      data_source = 'alpaca',\n",
-    "      time_interval= '1Min', \n",
+    "      time_interval= '5Min', \n",
     "      technical_indicator_list= INDICATORS,\n",
     "      drl_lib='elegantrl', \n",
     "      env=env, \n",
@@ -1436,11 +1453,39 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example results:\n",
+    "\n",
+    "\n",
+    "# | `step`: Number of samples, or total training steps, or running times of `env.step()`.  #Where is this set?\n",
+    "# | `time`: Time spent from the start of training to this moment. # Total Runtime for training.\n",
+    "# | `avgR`: Average value of cumulative rewards,# which is the sum of rewards in an episode. negative or 0 is  not good, need to adjust.\n",
+    "# | `stdR`: Standard dev of cumulative rewards, which is the sum of rewards in an episode.\n",
+    "# | `avgS`: Average of steps in an episode.   #should be at least 1000 preferably more, where is this set?\n",
+    "# | `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
+    "# | `objA`: Objective of Actor network. It is the average Q value of the critic network. #Higher the better, it is calculated per\n",
+    "# |     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
+    "# | 2.00e+04        11  |    -0.00    0.00    7799  |     0.03      0.04\n",
+    "# | 4.00e+04        21  |    -0.00    0.00    7799  |     0.01      0.04\n",
+    "# | 6.00e+04        32  |    -0.00    0.00    7799  |     0.00      0.03\n",
+    "# | 8.00e+04        42  |    -0.00    0.00    7799  |     0.00      0.05\n",
+    "# | 1.00e+05        53  |    -0.00    0.00    7799  |     0.00      0.04\n",
+    "# | 1.20e+05        64  |    -0.00    0.00    7799  |     0.00      0.05\n",
+    "# | 1.40e+05        74  |    -0.00    0.00    7799  |     0.00      0.06\n",
+    "# | 1.60e+05        85  |    -0.00    0.00    7799  |     0.00      0.06\n",
+    "# | 1.80e+05        95  |    -0.00    0.00    7799  |     0.00      0.04\n",
+    "# | 2.00e+05       106  |    -0.00    0.00    7799  |     0.00      0.05"
+   ]
   },
   {
    "cell_type": "markdown",
