trying to get reWARDS TO WORK

--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -33,10 +33,10 @@
    },
    "outputs": [],
    "source": [
-    "## install finrl library\n",
-    "#!pip install wrds\n",
-    "#!pip install swig\n",
-    "#!pip install git+https://github.com/AI4Finance-Foundation/FinRL.git"
+    "# ## install finrl library\n",
+    "# %pip install wrds\n",
+    "# %pip install swig\n",
+    "# %pip install git+https://github.com/AI4Finance-Foundation/FinRL.git"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 174,
    "metadata": {
     "id": "8Z6qlLXY-fA2"
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 176,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -115,6 +115,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INDICATORS = INDICATORS +['atr_10']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['macd',\n",
+       " 'boll_ub',\n",
+       " 'boll_lb',\n",
+       " 'rsi_30',\n",
+       " 'cci_30',\n",
+       " 'dx_30',\n",
+       " 'close_30_sma',\n",
+       " 'close_60_sma',\n",
+       " 'atr_10']"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#INDICATORS"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +178,7 @@
     "    def forward(self, state: Tensor) -> Tensor:\n",
     "        return self.net(state).tanh()  # action.tanh()\n",
     "\n",
-    "    def get_action(self, state: Tensor) -> (Tensor, Tensor):  # for exploration\n",
+    "    def get_action(self, state: Tensor) -> (Tensor):  # for exploration\n",
     "        action_avg = self.net(state)\n",
     "        action_std = self.action_std_log.exp()\n",
     "\n",
@@ -150,7 +187,7 @@
     "        logprob = dist.log_prob(action).sum(1)\n",
     "        return action, logprob\n",
     "\n",
-    "    def get_logprob_entropy(self, state: Tensor, action: Tensor) -> (Tensor, Tensor):\n",
+    "    def get_logprob_entropy(self, state: Tensor, action: Tensor) -> (Tensor):\n",
     "        action_avg = self.net(state)\n",
     "        action_std = self.action_std_log.exp()\n",
     "\n",
@@ -166,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +281,7 @@
     "        if self.cwd is None:  # set cwd (current working directory) for saving model\n",
     "            self.cwd = f'./{self.env_name}_{self.agent_class.__name__[5:]}'\n",
     "        os.makedirs(self.cwd, exist_ok=True)\n",
+    "       \n",
     "\n",
     "\n",
     "def get_gym_env_args(env, if_print: bool) -> dict:\n",
@@ -283,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 186,
    "metadata": {
     "id": "-EYx40S84tzo"
    },
@@ -331,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,13 +621,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "9tzAw9k26nAC"
@@ -600,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 190,
    "metadata": {
     "id": "pwCbbocm6PHM"
    },
@@ -744,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 191,
    "metadata": {
     "id": "j8-e03ev32oz"
    },
@@ -753,12 +784,12 @@
     "from __future__ import annotations\n",
     "\n",
     "from finrl.config import ERL_PARAMS\n",
-    "from finrl.config import INDICATORS\n",
+    "#from finrl.config import INDICATORS\n",
     "from finrl.config import RLlib_PARAMS\n",
     "from finrl.config import SAC_PARAMS\n",
-    "from finrl.config import TRAIN_END_DATE\n",
-    "from finrl.config import TRAIN_START_DATE\n",
-    "from finrl.config_tickers import DOW_30_TICKER\n",
+    "#from finrl.config import TRAIN_END_DATE\n",
+    "#from finrl.config import TRAIN_START_DATE\n",
+    "#from finrl.config_tickers import DOW_30_TICKER\n",
     "from finrl.meta.data_processor import DataProcessor\n",
     "\n",
     "# construct environment\n",
@@ -816,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 192,
    "metadata": {
     "id": "Evsg8QtEDHDO"
    },
@@ -824,10 +855,10 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
-    "from finrl.config import INDICATORS\n",
+    "# from finrl.config import INDICATORS\n",
     "from finrl.config import RLlib_PARAMS\n",
-    "from finrl.config import TEST_END_DATE\n",
-    "from finrl.config import TEST_START_DATE\n",
+    "#from finrl.config import TEST_END_DATE\n",
+    "#from finrl.config import TEST_START_DATE\n",
     "from finrl.config_tickers import DOW_30_TICKER\n",
     "\n",
     "def test(\n",
@@ -884,22 +915,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['macd',\n",
+       " 'boll_ub',\n",
+       " 'boll_lb',\n",
+       " 'rsi_30',\n",
+       " 'cci_30',\n",
+       " 'dx_30',\n",
+       " 'close_30_sma',\n",
+       " 'close_60_sma',\n",
+       " 'atr_10']"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "INDICATORS"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "pf5aVHAU-xF6"
    },
    "source": [
-    "## Import Dow Jones 30 Symbols"
+    "## Create an array of Ticker Symbols\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ticker_list = DOW_30_TICKER\n",
-    "ticker_list = ['PHUN','GPRO','KEY'] #Let's get \n",
+    "ticker_list = ['PHUN','GPRO','KEY','SLV'] #Let's get \n",
     "\n"
    ]
   },
@@ -915,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 198,
    "metadata": {
     "id": "jx25TA_X87F-"
    },
@@ -926,7 +986,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(action_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -939,7 +1016,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['PHUN', 'GPRO', 'KEY']\n"
+      "['PHUN', 'GPRO', 'KEY', 'SLV']\n"
      ]
     }
    ],
@@ -949,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 203,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -962,7 +1039,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['macd', 'boll_ub', 'boll_lb', 'rsi_30', 'cci_30', 'dx_30', 'close_30_sma', 'close_60_sma']\n"
+      "['macd', 'boll_ub', 'boll_lb', 'rsi_30', 'cci_30', 'dx_30', 'close_30_sma', 'close_60_sma', 'atr_10']\n"
      ]
     }
    ],
@@ -972,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 204,
    "metadata": {
     "id": "GLfkTsXK-e90"
    },
@@ -987,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 205,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1000,7 +1077,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36\n"
+      "51\n"
      ]
     }
    ],
@@ -1010,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 206,
    "metadata": {
     "id": "8Z6qlLXY-fA2"
    },
@@ -1039,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 207,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1090,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,13 +1276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 214,
    "metadata": {
     "id": "g1F84mebj4gu"
    },
    "outputs": [],
    "source": [
-    "ERL_PARAMS = {\"learning_rate\": 3e-6,\"batch_size\": 2048,\"gamma\":  0.985,\n",
+    "ERL_PARAMS = {\"learning_rate\": 3e-5,\"batch_size\": 2048,\"gamma\":  0.90,\n",
     "        \"seed\":312,\"net_dimension\":[128,64], \"target_step\":5000, \"eval_gap\":30,\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
@@ -1216,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 215,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1237,7 +1314,23 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n",
+      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  KEY  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
       "  if pd.Timedelta(time_interval).delta < day_delta:\n"
      ]
@@ -1246,6 +1339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
       "\n",
       "| `step`: Number of samples, or total training steps, or running times of `env.step()`.\n",
       "| `time`: Time spent from the start of training to this moment.\n",
@@ -1255,27 +1349,24 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        11  |    24.54    0.00    7799  |     1.99      0.04\n",
-      "| 4.00e+04        21  |    22.00    0.00    7799  |     0.74      0.05\n",
-      "| 6.00e+04        32  |    25.37    0.00    7799  |     0.49      0.05\n",
-      "| 8.00e+04        42  |    20.31    0.00    7799  |     0.60      0.04\n",
-      "| 1.00e+05        53  |     8.51    0.00    7799  |     0.39      0.04\n"
+      "| 2.00e+04        12  |    -0.71    0.00   12345  |     0.76      0.04\n",
+      "| 4.00e+04        23  |    -0.59    0.00   12345  |     0.51      0.04\n"
      ]
     }
    ],
    "source": [
-    "sd = datetime.now()+timedelta(days=-30);\n",
-    "sd = sd.strftime('%Y-%m-%d')\n",
+    "TrainSd = datetime.now()+timedelta(days=-60);\n",
+    "TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
-    "ed = datetime.now()+timedelta(days=-3);\n",
-    "ed = ed.strftime('%Y-%m-%d')\n",
+    "TrainEd = datetime.now()+timedelta(days=-10);\n",
+    "TrainEd = TrainEd.strftime('%Y-%m-%d')\n",
     "#print(ed)\n",
     "# train function implements finrl.meta.data_processor import DataProcessor\n",
-    "train(start_date = sd, #'2023-1-01', \n",
-    "      end_date = ed,\n",
+    "train(start_date = TrainSd, #'2023-1-01', \n",
+    "      end_date = TrainEd ,\n",
     "      ticker_list = ticker_list, \n",
     "      data_source = 'alpaca',\n",
-    "      time_interval= '1Min', \n",
+    "      time_interval= '1day', \n",
     "      technical_indicator_list= INDICATORS,\n",
     "      drl_lib='elegantrl', \n",
     "      env=env,\n",
@@ -1300,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 169,
    "metadata": {
     "id": "SxYoWCDa02TW"
    },
@@ -1329,7 +1420,7 @@
       "price_array:  7800\n",
       "| load actor from: ./papertrading_erl/actor.pth\n",
       "Test Finished!\n",
-      "episode_return 1.0200287649085367\n"
+      "episode_return 0.9769095852869081\n"
      ]
     }
    ],
