--- a/examples/FinRL_Ensemble_StockTrading_ICAIF_2020.ipynb
+++ b/examples/FinRL_Ensemble_StockTrading_ICAIF_2020.ipynb
@@ -842,7 +842,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "finrlenv",
    "language": "python",
    "name": "python3"
   },
@@ -856,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   },
   "pycharm": {
    "stem_cell": {
@@ -869,7 +869,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "146de41bdd921a4e49b5430ed435984d2f3b4e3da25c2db8b0d474b5a0f67c6d"
+    "hash": "40d5bf3a0028f59af012b0267756a206437470ca0ff90e5d4bd6ad29f4598305"
    }
   }
  },
