--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -40,6 +40,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "3rwy7V72-8YY"
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {
     "id": "8Z6qlLXY-fA2"
    },
@@ -64,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import finrl;"
+    "#import finrl;"
    ]
   },
   {
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -116,39 +125,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INDICATORS = INDICATORS +['atr_10']"
+    "\n",
+    "import importlib;\n",
+    "import finrl;\n",
+    "\n",
+    "importlib.reload(finrl.config);\n",
+    "\n",
+    "from finrl.config import INDICATORS;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['macd',\n",
-       " 'boll_ub',\n",
-       " 'boll_lb',\n",
-       " 'rsi_30',\n",
-       " 'cci_30',\n",
-       " 'dx_30',\n",
-       " 'close_30_sma',\n",
-       " 'close_60_sma',\n",
-       " 'atr_10']"
+       "['AXP',\n",
+       " 'AMGN',\n",
+       " 'AAPL',\n",
+       " 'BA',\n",
+       " 'CAT',\n",
+       " 'CSCO',\n",
+       " 'CVX',\n",
+       " 'GS',\n",
+       " 'HD',\n",
+       " 'HON',\n",
+       " 'IBM',\n",
+       " 'INTC',\n",
+       " 'JNJ',\n",
+       " 'KO',\n",
+       " 'JPM',\n",
+       " 'MCD',\n",
+       " 'MMM',\n",
+       " 'MRK',\n",
+       " 'MSFT',\n",
+       " 'NKE',\n",
+       " 'PG',\n",
+       " 'TRV',\n",
+       " 'UNH',\n",
+       " 'CRM',\n",
+       " 'VZ',\n",
+       " 'V',\n",
+       " 'WBA',\n",
+       " 'WMT',\n",
+       " 'DIS',\n",
+       " 'DOW']"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#INDICATORS"
+    "#INDICATORS\n",
+    "DOW_30_TICKER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#INDICATORS  = INDICATORS +['atr_10']"
    ]
   },
   {
@@ -160,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {
     "id": "-EYx40S84tzo"
    },
@@ -369,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {
     "id": "pwCbbocm6PHM"
    },
@@ -775,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {
     "id": "j8-e03ev32oz"
    },
@@ -847,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {
     "id": "Evsg8QtEDHDO"
    },
@@ -916,28 +962,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['macd',\n",
-       " 'boll_ub',\n",
-       " 'boll_lb',\n",
-       " 'rsi_30',\n",
-       " 'cci_30',\n",
-       " 'dx_30',\n",
-       " 'close_30_sma',\n",
-       " 'close_60_sma',\n",
-       " 'atr_10']"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "INDICATORS"
    ]
@@ -954,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {
     "id": "jx25TA_X87F-"
    },
@@ -986,24 +1013,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(action_dim)"
+    "#print(action_dim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1011,22 +1030,14 @@
     "id": "UIV0kO_y-inG",
     "outputId": "bd7b3c21-641e-4eb7-a4af-ae7d156042a6"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['PHUN', 'GPRO', 'KEY', 'SLV']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(ticker_list)"
+    "#print(ticker_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1034,22 +1045,14 @@
     "id": "CnqQ-cC5-rfO",
     "outputId": "29b248c9-ec98-44cd-befb-65192af72ea4"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['macd', 'boll_ub', 'boll_lb', 'rsi_30', 'cci_30', 'dx_30', 'close_30_sma', 'close_60_sma', 'atr_10']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(INDICATORS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {
     "id": "GLfkTsXK-e90"
    },
@@ -1064,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1072,22 +1075,14 @@
     "id": "QqUkvImG-n66",
     "outputId": "9cb4a3d8-5064-4971-d095-65d3ab12f11a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "51\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(state_dim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {
     "id": "8Z6qlLXY-fA2"
    },
@@ -1116,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1124,15 +1119,7 @@
     "id": "3ZCru8f7GqgL",
     "outputId": "010e6a83-1280-410a-e240-4bc8ec124774"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alpaca successfully connected\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DP = DataProcessor(data_source = 'alpaca',\n",
     "                  API_KEY = API_KEY, \n",
@@ -1152,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {
     "id": "NPNxj6c8HIiE"
    },
@@ -1167,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,14 +1263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 86,
    "metadata": {
     "id": "g1F84mebj4gu"
    },
    "outputs": [],
    "source": [
-    "ERL_PARAMS = {\"learning_rate\": 3e-5,\"batch_size\": 2048,\"gamma\":  0.90,\n",
-    "        \"seed\":312,\"net_dimension\":[128,64], \"target_step\":5000, \"eval_gap\":30,\n",
+    "ERL_PARAMS = {\"learning_rate\": 3e-1,\"batch_size\": 2048,\"gamma\":  0.99,\n",
+    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":20000, \"eval_gap\":30,\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
     "#if you want to use larger datasets (change to longer period), and it raises error, \n",
@@ -1293,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 87,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1349,8 +1336,11 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        12  |    -0.71    0.00   12345  |     0.76      0.04\n",
-      "| 4.00e+04        23  |    -0.59    0.00   12345  |     0.51      0.04\n"
+      "| 2.00e+04        14  |    -0.48    0.00   12119  |     0.10      0.61\n",
+      "| 4.00e+04        28  |    -0.53    0.00   12119  |     0.07      1.11\n",
+      "| 6.00e+04        42  |    -0.52    0.00   12119  |     0.34      1.26\n",
+      "| 8.00e+04        56  |    -0.51    0.00   12119  |     0.00      1.43\n",
+      "| 1.00e+05        71  |    -0.53    0.00   12119  |     0.00      1.57\n"
      ]
     }
    ],
@@ -1358,7 +1348,7 @@
     "TrainSd = datetime.now()+timedelta(days=-60);\n",
     "TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
-    "TrainEd = datetime.now()+timedelta(days=-10);\n",
+    "TrainEd = datetime.now()+timedelta(days=-13);\n",
     "TrainEd = TrainEd.strftime('%Y-%m-%d')\n",
     "#print(ed)\n",
     "# train function implements finrl.meta.data_processor import DataProcessor\n",
@@ -1391,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 88,
    "metadata": {
     "id": "SxYoWCDa02TW"
    },
@@ -1408,7 +1398,23 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n",
+      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  KEY  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
       "  if pd.Timedelta(time_interval).delta < day_delta:\n"
      ]
@@ -1417,10 +1423,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "price_array:  7800\n",
+      "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
+      "price_array:  2736\n",
       "| load actor from: ./papertrading_erl/actor.pth\n",
       "Test Finished!\n",
-      "episode_return 0.9769095852869081\n"
+      "episode_return 0.9989069902967056\n"
      ]
     }
    ],
@@ -1430,13 +1437,17 @@
     "# The Output is some sort of score output by DRL_prediction()\n",
     "# Test Finished!\n",
     "# episode_return 1.0200287649085367\n",
+    "TestSd = datetime.now()+timedelta(days=-12);\n",
+    "TestSd = TestSd.strftime('%Y-%m-%d')\n",
+    "#print(sd)\n",
+    "TestEd = datetime.now()+timedelta(days=-1);\n",
+    "TestEd = TestEd.strftime('%Y-%m-%d');\n",
     "\n",
-    "\n",
-    "account_value_erl=test(start_date = sd, \n",
-    "                      end_date = ed,\n",
+    "account_value_erl=test(start_date = TestSd, \n",
+    "                      end_date = TestEd,\n",
     "                      ticker_list = ticker_list, \n",
     "                      data_source = 'alpaca',\n",
-    "                      time_interval= '1Min', \n",
+    "                      time_interval= '1Day', \n",
     "                      technical_indicator_list= INDICATORS,\n",
     "                      drl_lib='elegantrl', \n",
     "                      env=env, \n",
@@ -1469,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 90,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1508,28 +1519,34 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        11  |    -0.00    0.00    7799  |     0.03      0.04\n",
-      "| 4.00e+04        21  |    -0.00    0.00    7799  |     0.01      0.04\n",
-      "| 6.00e+04        32  |    -0.00    0.00    7799  |     0.00      0.03\n",
-      "| 8.00e+04        42  |    -0.00    0.00    7799  |     0.00      0.05\n",
-      "| 1.00e+05        53  |    -0.00    0.00    7799  |     0.00      0.04\n",
-      "| 1.20e+05        64  |    -0.00    0.00    7799  |     0.00      0.05\n",
-      "| 1.40e+05        74  |    -0.00    0.00    7799  |     0.00      0.06\n",
-      "| 1.60e+05        85  |    -0.00    0.00    7799  |     0.00      0.06\n",
-      "| 1.80e+05        95  |    -0.00    0.00    7799  |     0.00      0.04\n",
-      "| 2.00e+05       106  |    -0.00    0.00    7799  |     0.00      0.05\n"
+      "| 2.00e+04        14  |    70.13    0.00   12345  |     0.38      0.15\n",
+      "| 4.00e+04        28  |    69.18    0.00   12345  |     0.97      0.66\n",
+      "| 6.00e+04        42  |    70.53    0.00   12345  |     0.04      0.66\n",
+      "| 8.00e+04        56  |    71.26    0.00   12345  |     0.04      0.66\n",
+      "| 1.00e+05        71  |    70.14    0.00   12345  |     0.09      0.65\n",
+      "| 1.20e+05        85  |    72.27    0.00   12345  |     0.09      0.68\n",
+      "| 1.40e+05        99  |    69.59    0.00   12345  |     0.01      0.67\n",
+      "| 1.60e+05       113  |    68.97    0.00   12345  |     0.01      0.67\n",
+      "| 1.80e+05       127  |    70.77    0.00   12345  |     0.02      0.66\n",
+      "| 2.00e+05       142  |    74.21    0.00   12345  |     0.05      0.66\n"
      ]
     }
    ],
    "source": [
     "#Again what is the difference between test and train?  And what is the difference between this train and the first one?\n",
     "#Are there new/different parameters?  Have preset values changed?\n",
+    "FullSd = datetime.now()+timedelta(days=-60);\n",
+    "FullSd = FullSd.strftime('%Y-%m-%d')\n",
+    "#print(sd)\n",
+    "FullEd = datetime.now()+timedelta(days=-1);\n",
+    "FullEd = FullEd.strftime('%Y-%m-%d');\n",
     "\n",
-    "train(start_date = sd, \n",
-    "      end_date = ed,\n",
+    "\n",
+    "train(start_date = FullSd, \n",
+    "      end_date = FullEd,\n",
     "      ticker_list = ticker_list, \n",
     "      data_source = 'alpaca',\n",
-    "      time_interval= '5Min', \n",
+    "      time_interval= '1Day', \n",
     "      technical_indicator_list= INDICATORS,\n",
     "      drl_lib='elegantrl', \n",
     "      env=env, \n",
@@ -1544,14 +1561,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1934,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1981,22 +1992,14 @@
     "id": "7nw0i-0UN3-7",
     "outputId": "25729df7-4775-49af-bf5a-38e3970d0056"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['AXP', 'AMGN', 'AAPL', 'BA', 'CAT', 'CSCO', 'CVX', 'GS', 'HD', 'HON', 'IBM', 'INTC', 'JNJ', 'KO', 'JPM', 'MCD', 'MMM', 'MRK', 'MSFT', 'NKE', 'PG', 'TRV', 'UNH', 'CRM', 'VZ', 'V', 'WBA', 'WMT', 'DIS', 'DOW']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(DOW_30_TICKER)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2004,18 +2007,7 @@
     "id": "YsSBK9ION1t6",
     "outputId": "49a69655-850f-436b-a21c-fffe48528e71"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "state_dim"
    ]
