--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1336,11 +1336,11 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        14  |    -0.48    0.00   12119  |     0.10      0.61\n",
-      "| 4.00e+04        28  |    -0.53    0.00   12119  |     0.07      1.11\n",
-      "| 6.00e+04        42  |    -0.52    0.00   12119  |     0.34      1.26\n",
-      "| 8.00e+04        56  |    -0.51    0.00   12119  |     0.00      1.43\n",
-      "| 1.00e+05        71  |    -0.53    0.00   12119  |     0.00      1.57\n"
+      "| 2.00e+04        14  |    -0.51    0.00   12119  |     0.06      0.65\n",
+      "| 4.00e+04        28  |    -0.51    0.00   12119  |     0.07      1.02\n",
+      "| 6.00e+04        42  |    -0.49    0.00   12119  |     0.28      1.10\n",
+      "| 8.00e+04        56  |    -0.50    0.00   12119  |     0.01      1.17\n",
+      "| 1.00e+05        71  |    -0.52    0.00   12119  |     0.00      1.26\n"
      ]
     }
    ],
@@ -1352,11 +1352,13 @@
     "TrainEd = TrainEd.strftime('%Y-%m-%d')\n",
     "#print(ed)\n",
     "# train function implements finrl.meta.data_processor import DataProcessor\n",
+    "#Time interval defines the data download frequency/period. 1Min, 5Min, 15Min, 1H, 1D  are valid values for Alpaca\n",
+    "\n",
     "train(start_date = TrainSd, #'2023-1-01', \n",
     "      end_date = TrainEd ,\n",
     "      ticker_list = ticker_list, \n",
     "      data_source = 'alpaca',\n",
-    "      time_interval= '1day', \n",
+    "      time_interval= '1D', \n",
     "      technical_indicator_list= INDICATORS,\n",
     "      drl_lib='elegantrl', \n",
     "      env=env,\n",
@@ -1381,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "metadata": {
     "id": "SxYoWCDa02TW"
    },
@@ -1427,7 +1429,7 @@
       "price_array:  2736\n",
       "| load actor from: ./papertrading_erl/actor.pth\n",
       "Test Finished!\n",
-      "episode_return 0.9989069902967056\n"
+      "episode_return 0.999001019808394\n"
      ]
     }
    ],
@@ -1437,6 +1439,7 @@
     "# The Output is some sort of score output by DRL_prediction()\n",
     "# Test Finished!\n",
     "# episode_return 1.0200287649085367\n",
+    "#Time interval defines the data download frequency/period.\n",
     "TestSd = datetime.now()+timedelta(days=-12);\n",
     "TestSd = TestSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
@@ -1447,7 +1450,7 @@
     "                      end_date = TestEd,\n",
     "                      ticker_list = ticker_list, \n",
     "                      data_source = 'alpaca',\n",
-    "                      time_interval= '1Day', \n",
+    "                      time_interval= '1D', \n",
     "                      technical_indicator_list= INDICATORS,\n",
     "                      drl_lib='elegantrl', \n",
     "                      env=env, \n",
@@ -1480,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1501,7 +1504,23 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n",
+      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  KEY  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
       "  if pd.Timedelta(time_interval).delta < day_delta:\n"
      ]
@@ -1510,6 +1529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
       "\n",
       "| `step`: Number of samples, or total training steps, or running times of `env.step()`.\n",
       "| `time`: Time spent from the start of training to this moment.\n",
@@ -1519,16 +1539,16 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        14  |    70.13    0.00   12345  |     0.38      0.15\n",
-      "| 4.00e+04        28  |    69.18    0.00   12345  |     0.97      0.66\n",
-      "| 6.00e+04        42  |    70.53    0.00   12345  |     0.04      0.66\n",
-      "| 8.00e+04        56  |    71.26    0.00   12345  |     0.04      0.66\n",
-      "| 1.00e+05        71  |    70.14    0.00   12345  |     0.09      0.65\n",
-      "| 1.20e+05        85  |    72.27    0.00   12345  |     0.09      0.68\n",
-      "| 1.40e+05        99  |    69.59    0.00   12345  |     0.01      0.67\n",
-      "| 1.60e+05       113  |    68.97    0.00   12345  |     0.01      0.67\n",
-      "| 1.80e+05       127  |    70.77    0.00   12345  |     0.02      0.66\n",
-      "| 2.00e+05       142  |    74.21    0.00   12345  |     0.05      0.66\n"
+      "| 2.00e+04        14  |    -0.00    0.00   12345  |     0.00      0.05\n",
+      "| 4.00e+04        29  |    -0.00    0.00   12345  |     0.00      0.04\n",
+      "| 6.00e+04        43  |    -0.00    0.00   12345  |     0.00      0.05\n",
+      "| 8.00e+04        57  |    -0.00    0.00   12345  |     0.00      0.06\n",
+      "| 1.00e+05        71  |    -0.00    0.00   12345  |     0.00      0.05\n",
+      "| 1.20e+05        85  |    -0.00    0.00   12345  |     0.00      0.05\n",
+      "| 1.40e+05       100  |    -0.00    0.00   12345  |     0.00      0.05\n",
+      "| 1.60e+05       114  |    -0.00    0.00   12345  |     0.00      0.05\n",
+      "| 1.80e+05       128  |    -0.00    0.00   12345  |     0.00      0.05\n",
+      "| 2.00e+05       142  |    -0.00    0.00   12345  |     0.00      0.04\n"
      ]
     }
    ],
@@ -1540,13 +1560,13 @@
     "#print(sd)\n",
     "FullEd = datetime.now()+timedelta(days=-1);\n",
     "FullEd = FullEd.strftime('%Y-%m-%d');\n",
-    "\n",
+    "#Time interval defines the data download frequency/period.\n",
     "\n",
     "train(start_date = FullSd, \n",
     "      end_date = FullEd,\n",
     "      ticker_list = ticker_list, \n",
     "      data_source = 'alpaca',\n",
-    "      time_interval= '1Day', \n",
+    "      time_interval= '1D', \n",
     "      technical_indicator_list= INDICATORS,\n",
     "      drl_lib='elegantrl', \n",
     "      env=env, \n",
@@ -1609,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "id": "LpkoZpYzfneS"
    },
@@ -1698,7 +1718,7 @@
     "            self.alpaca = tradeapi.REST(API_KEY,API_SECRET,API_BASE_URL, 'v2')\n",
     "        except:\n",
     "            raise ValueError('Fail to connect Alpaca. Please check account info and internet connection.')\n",
-    "        \n",
+    "        #1H and 1D are both suppoorted\n",
     "        #read trading time interval\n",
     "        if time_interval == '1s':\n",
     "            self.time_interval = 1\n",
@@ -1710,6 +1730,10 @@
     "            self.time_interval = 60 * 5\n",
     "        elif time_interval == '15Min':\n",
     "            self.time_interval = 60 * 15\n",
+    "        elif time_interval =='1H':\n",
+    "            self.time_interval = 60*60\n",
+    "        elif time_interval =='1D':\n",
+    "            self.time_interval= 60*60*24\n",
     "        else:\n",
     "            raise ValueError('Time interval input is NOT supported yet.')\n",
     "        \n",
@@ -1940,17 +1964,8 @@
     "            return 1 / (1 + np.exp(-x * np.e)) - 0.5\n",
     "\n",
     "        return sigmoid(ary / thresh) * thresh\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##Removed from cell above might need to put it back :)\n",
-    "\n",
+    "   \n",
+    "#Keep this here!\n",
     "class StockEnvEmpty(gym.Env):\n",
     "    #Empty Env used for loading rllib agent\n",
     "    def __init__(self,config):\n",
@@ -1970,8 +1985,16 @@
     "        return \n",
     "\n",
     "    def step(self, actions):\n",
-    "        return"
+    "        return\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1984,22 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "7nw0i-0UN3-7",
-    "outputId": "25729df7-4775-49af-bf5a-38e3970d0056"
-   },
-   "outputs": [],
-   "source": [
-    "print(DOW_30_TICKER)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2007,14 +2015,25 @@
     "id": "YsSBK9ION1t6",
     "outputId": "49a69655-850f-436b-a21c-fffe48528e71"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "state_dim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2022,21 +2041,47 @@
     "id": "xYtSv6P1N247",
     "outputId": "174550ce-664a-41fc-bd89-9d3726960c5b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "action_dim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "id": "Kl9nulnAJtiI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| load actor from: ./papertrading_erl_retrain/actor.pth\n",
+      "Waiting for market to open...\n",
+      "Market opened.\n",
+      "4\n",
+      "Market order of | 2 PHUN sell | completed.\n",
+      "Quantity is 0, order of | 0 GPRO sell | not completed.\n",
+      "Quantity is 0, order of | 0 KEY sell | not completed.\n",
+      "Quantity is 0, order of | 0 SLV sell | not completed.\n"
+     ]
+    }
+   ],
    "source": [
-    "paper_trading_erl = AlpacaPaperTrading(ticker_list = DOW_30_TICKER, \n",
-    "                                       time_interval = '1Min', \n",
+    "paper_trading_erl = AlpacaPaperTrading(ticker_list = ticker_list, \n",
+    "                                       time_interval = '1D', \n",
     "                                       drl_lib = 'elegantrl', \n",
     "                                       agent = 'ppo', \n",
     "                                       cwd = './papertrading_erl_retrain', \n",
